# grepz

./: .flake8  README.md  pyproject.toml
grepz/: cli.py  search.py  utils.py
tests/: test_search.py  test_utils.py
tests/assets/: a.txt  b.txt  c.txt
